[gd_scene load_steps=46 format=4 uid="uid://30jb4kc5kf5p"]

[ext_resource type="Texture2D" uid="uid://cocms0prufyqi" path="res://Background/grasslands.png" id="1_q8u5g"]
[ext_resource type="Texture2D" uid="uid://c84i8sfky8bs5" path="res://Background/tiles/wooden_tile.png" id="2_lhr70"]
[ext_resource type="Texture2D" uid="uid://b56x3o62iwkfq" path="res://Background/tiles/wooden_mod_tile.png" id="3_wp0k4"]
[ext_resource type="Texture2D" uid="uid://cansjd7oqbysh" path="res://icon.png" id="4_bjd11"]
[ext_resource type="Script" uid="uid://deywyrxxsvfph" path="res://GameBoard/GameBoard.gd" id="5_qmy6f"]
[ext_resource type="PackedScene" uid="uid://dogbk12p1cm4d" path="res://UnitOverlay/UnitOverlay.tscn" id="6_mwfav"]
[ext_resource type="PackedScene" uid="uid://d1likmlo5i2ck" path="res://GameBoard/UnitPath.tscn" id="7_3p2gp"]
[ext_resource type="PackedScene" uid="uid://bv1ul1qynrdwd" path="res://GameBoard/Cursor/Cursor.tscn" id="8_cvmbd"]
[ext_resource type="PackedScene" uid="uid://d4mhjq651egt" path="res://Units/Unit.tscn" id="9_ft6cd"]
[ext_resource type="FontFile" uid="uid://bxhuwhfib2ly1" path="res://GameBoard/Cards/monogram/ttf/monogram.ttf" id="10_lhr70"]
[ext_resource type="Texture2D" uid="uid://don6rhlapjhye" path="res://Units/bear.png" id="11_qmy6f"]
[ext_resource type="Texture2D" uid="uid://ceanoo0yxcj8i" path="res://Units/squirrel.png" id="12_mwfav"]
[ext_resource type="Texture2D" uid="uid://x4kxxdinjx3r" path="res://Units/bugcat.png" id="13_3p2gp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5tkph"]
texture = ExtResource("1_q8u5g")
texture_region_size = Vector2i(80, 80)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c308a"]
texture = ExtResource("1_q8u5g")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cat8j"]
texture = ExtResource("2_lhr70")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tlhoj"]
texture = ExtResource("3_wp0k4")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w16gf"]
texture = ExtResource("4_bjd11")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="1"]
sources/0 = SubResource("TileSetAtlasSource_5tkph")
sources/1 = SubResource("TileSetAtlasSource_c308a")
sources/2 = SubResource("TileSetAtlasSource_cat8j")
sources/3 = SubResource("TileSetAtlasSource_tlhoj")
sources/4 = SubResource("TileSetAtlasSource_w16gf")

[sub_resource type="Curve2D" id="Curve2D_lhr70"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="Curve2D_wp0k4"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="Curve2D_bjd11"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="Curve2D_qmy6f"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="Curve2D_mwfav"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="Curve2D_3p2gp"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="Curve2D_cvmbd"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="Curve2D_ft6cd"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="Curve2D_bb450"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="Curve2D_nfivy"]
resource_local_to_scene = true

[sub_resource type="LabelSettings" id="LabelSettings_1iba3"]
font = ExtResource("10_lhr70")
font_size = 18
outline_size = 2
outline_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wp0k4"]
font = ExtResource("10_lhr70")
font_size = 18
outline_size = 2
outline_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bjd11"]
font = ExtResource("10_lhr70")
font_size = 18
outline_size = 2
outline_color = Color(0, 0.5019608, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qmy6f"]
font = ExtResource("10_lhr70")
font_size = 18
outline_size = 2
outline_color = Color(0, 0.5019608, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lhr70"]
font = ExtResource("10_lhr70")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_mwfav"]
font = ExtResource("10_lhr70")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_3p2gp"]
font = ExtResource("10_lhr70")

[sub_resource type="LabelSettings" id="LabelSettings_1nqs0"]
font = ExtResource("10_lhr70")
font_size = 20

[sub_resource type="FontVariation" id="FontVariation_lhr70"]
base_font = ExtResource("10_lhr70")

[sub_resource type="FontVariation" id="FontVariation_wp0k4"]
base_font = SubResource("FontVariation_lhr70")

[sub_resource type="LabelSettings" id="LabelSettings_cvmbd"]
font = SubResource("FontVariation_wp0k4")
font_size = 14

[sub_resource type="Animation" id="Animation_lhr70"]
resource_name = "reduce_time"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["TEMPO REDUZIDO!", "TEMPO REDUZIDO!"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_wp0k4"]
resource_name = "swap_cards"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["TROCA DE CARTAS!"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_bjd11"]
resource_name = "freeze_unit"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["PE√ÉO CONGELADO!"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_qmy6f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mwfav"]
_data = {
&"RESET": SubResource("Animation_qmy6f"),
&"freeze_unit": SubResource("Animation_bjd11"),
&"reduce_time": SubResource("Animation_lhr70"),
&"swap_cards": SubResource("Animation_wp0k4")
}

[node name="Main" type="Node2D"]

[node name="Board" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(8, 24)
tile_map_data = PackedByteArray("AAABAAIAAgAAAAAAAAABAAMAAgAAAAAAAAABAAQAAgAAAAAAAAACAAEAAgAAAAAAAAACAAIAAgAAAAAAAAACAAMAAgAAAAAAAAACAAQAAwAAAAAAAAADAAEAAgAAAAAAAAADAAIAAgAAAAAAAAADAAMAAgAAAAAAAAADAAQAAgAAAAAAAAAEAAEAAgAAAAAAAAAEAAIAAgAAAAAAAAAEAAMAAgAAAAAAAAAEAAQAAgAAAAAAAAAAAAAAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAAQAAgAAAAAAAAABAAAAAgAAAAAAAAACAAAAAwAAAAAAAAADAAAAAgAAAAAAAAAEAAAAAgAAAAAAAAABAAEAAgAAAAAAAAA=")
tile_set = SubResource("1")

[node name="GameBoard" type="Node2D" parent="." node_paths=PackedStringArray("red_card_button_1", "red_card_button_2", "blue_card_button_1", "blue_card_button_2", "neutral_card_button", "timer_label", "start_label", "powerup_label", "red_powerup_1", "red_powerup_2", "red_powerup_3", "blue_powerup_1", "blue_powerup_2", "blue_powerup_3")]
script = ExtResource("5_qmy6f")
red_card_button_1 = NodePath("RedCardButton1")
red_card_button_2 = NodePath("RedCardButton2")
blue_card_button_1 = NodePath("BlueCardButton1")
blue_card_button_2 = NodePath("BlueCardButton2")
neutral_card_button = NodePath("NeutralCardButton")
timer_label = NodePath("TimerLabel")
start_label = NodePath("StartLabel")
powerup_label = NodePath("PowerUpLabel")
red_powerup_1 = NodePath("RedPowerUp1")
red_powerup_2 = NodePath("RedPowerUp2")
red_powerup_3 = NodePath("RedPowerUp3")
blue_powerup_1 = NodePath("BluePowerUp1")
blue_powerup_2 = NodePath("BluePowerUp2")
blue_powerup_3 = NodePath("BluePowerUp3")

[node name="UnitOverlay" parent="GameBoard" instance=ExtResource("6_mwfav")]
modulate = Color(0, 1, 0, 0.5647059)
position = Vector2(8, 24)

[node name="UnitPath" parent="GameBoard" instance=ExtResource("7_3p2gp")]
position = Vector2(16, 16)
enabled = false

[node name="Cursor" parent="GameBoard" instance=ExtResource("8_cvmbd")]

[node name="BlueMaster" parent="GameBoard" instance=ExtResource("9_ft6cd")]
position = Vector2(48, 32)
curve = SubResource("Curve2D_lhr70")
move_range = 5
invert_movement = true
is_master_piece = true
skin_offset = Vector2(1, 1)
frame = 32

[node name="BlueStudent1" parent="GameBoard" instance=ExtResource("9_ft6cd")]
position = Vector2(16, 32)
curve = SubResource("Curve2D_wp0k4")
move_range = 5
invert_movement = true
skin_offset = Vector2(1, 1)
frame = 48

[node name="BlueStudent2" parent="GameBoard" instance=ExtResource("9_ft6cd")]
position = Vector2(32, 32)
curve = SubResource("Curve2D_bjd11")
move_range = 5
invert_movement = true
skin_offset = Vector2(1, 1)
frame = 48

[node name="BlueStudent3" parent="GameBoard" instance=ExtResource("9_ft6cd")]
position = Vector2(64, 32)
curve = SubResource("Curve2D_qmy6f")
move_range = 5
invert_movement = true
skin_offset = Vector2(1, 1)
frame = 48

[node name="BlueStudent4" parent="GameBoard" instance=ExtResource("9_ft6cd")]
position = Vector2(80, 32)
curve = SubResource("Curve2D_mwfav")
move_range = 5
invert_movement = true
skin_offset = Vector2(1, 1)
frame = 48

[node name="RedMaster" parent="GameBoard" instance=ExtResource("9_ft6cd")]
position = Vector2(48, 96)
curve = SubResource("Curve2D_3p2gp")
move_range = 5
is_master_piece = true
skin_offset = Vector2(1, 1)

[node name="RedStudent1" parent="GameBoard" instance=ExtResource("9_ft6cd")]
position = Vector2(16, 96)
curve = SubResource("Curve2D_cvmbd")
move_range = 5
skin_offset = Vector2(1, 1)
frame = 16

[node name="RedStudent2" parent="GameBoard" instance=ExtResource("9_ft6cd")]
position = Vector2(32, 96)
curve = SubResource("Curve2D_ft6cd")
move_range = 5
skin_offset = Vector2(1, 1)
frame = 16

[node name="RedStudent3" parent="GameBoard" instance=ExtResource("9_ft6cd")]
position = Vector2(64, 96)
curve = SubResource("Curve2D_bb450")
move_range = 5
skin_offset = Vector2(1, 1)
frame = 16

[node name="RedStudent4" parent="GameBoard" instance=ExtResource("9_ft6cd")]
position = Vector2(80, 96)
curve = SubResource("Curve2D_nfivy")
move_range = 5
skin_offset = Vector2(1, 1)
frame = 16

[node name="RedCardButton1" type="TextureButton" parent="GameBoard"]
offset_left = 8.0
offset_top = 108.0
offset_right = 16.0
offset_bottom = 116.0
scale = Vector2(2, 2)

[node name="Label" type="Label" parent="GameBoard/RedCardButton1"]
layout_mode = 0
offset_left = 8.0
offset_top = 2.0
offset_right = 56.0
offset_bottom = 15.0
scale = Vector2(0.3, 0.3)
text = "elephant"
label_settings = SubResource("LabelSettings_1iba3")

[node name="RedCardButton2" type="TextureButton" parent="GameBoard"]
offset_left = 64.0
offset_top = 108.0
offset_right = 72.0
offset_bottom = 116.0
scale = Vector2(2, 2)

[node name="Label" type="Label" parent="GameBoard/RedCardButton2"]
layout_mode = 0
offset_left = 8.0
offset_top = 2.0
offset_right = 56.0
offset_bottom = 15.0
scale = Vector2(0.3, 0.3)
text = "elephant"
label_settings = SubResource("LabelSettings_wp0k4")

[node name="BlueCardButton1" type="TextureButton" parent="GameBoard"]
offset_left = 8.0
offset_top = 8.0
offset_right = 16.0
offset_bottom = 16.0
scale = Vector2(2, 2)

[node name="Label" type="Label" parent="GameBoard/BlueCardButton1"]
layout_mode = 0
offset_left = 8.0
offset_top = 2.0
offset_right = 56.0
offset_bottom = 15.0
scale = Vector2(0.3, 0.3)
text = "elephant"
label_settings = SubResource("LabelSettings_bjd11")

[node name="BlueCardButton2" type="TextureButton" parent="GameBoard"]
offset_left = 64.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 16.0
scale = Vector2(2, 2)

[node name="Label" type="Label" parent="GameBoard/BlueCardButton2"]
layout_mode = 0
offset_left = 8.0
offset_top = 2.0
offset_right = 56.0
offset_bottom = 15.0
scale = Vector2(0.3, 0.3)
text = "elephant"
label_settings = SubResource("LabelSettings_qmy6f")

[node name="NeutralCardButton" type="TextureButton" parent="GameBoard"]
offset_left = 104.0
offset_top = 36.0
offset_right = 112.0
offset_bottom = 44.0
scale = Vector2(2, 2)
disabled = true

[node name="Label" type="Label" parent="GameBoard/NeutralCardButton"]
layout_mode = 0
offset_left = -5.0
offset_top = 8.0
offset_right = 13.0
offset_bottom = 16.0
scale = Vector2(0.3, 0.3)
text = "elephant"
label_settings = SubResource("LabelSettings_lhr70")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="GameBoard/NeutralCardButton"]
layout_mode = 0
offset_left = -5.0
offset_top = -5.0
offset_right = 11.0
offset_bottom = 3.0
scale = Vector2(0.3, 0.3)
text = "NEXT"
label_settings = SubResource("LabelSettings_mwfav")

[node name="GameLabel" type="Label" parent="GameBoard"]
offset_left = 7.0
offset_top = 128.0
offset_right = 79.0
offset_bottom = 144.0
scale = Vector2(0.6, 0.6)
theme_override_font_sizes/font_size = 6
label_settings = SubResource("LabelSettings_3p2gp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnTimer" type="Timer" parent="GameBoard"]
wait_time = 20.0
one_shot = true

[node name="TimerLabel" type="Label" parent="GameBoard"]
offset_left = 94.0
offset_top = 64.0
offset_right = 134.0
offset_bottom = 87.0
scale = Vector2(0.5, 0.5)
text = "20"
label_settings = SubResource("LabelSettings_1nqs0")

[node name="StartLabel" type="Label" parent="GameBoard"]
visible = false
offset_left = 16.0
offset_top = 56.0
offset_right = 84.0
offset_bottom = 70.0
text = "Prepare-se..."
label_settings = SubResource("LabelSettings_cvmbd")
horizontal_alignment = 1
autowrap_mode = 3

[node name="RedPowerUp1" type="TextureButton" parent="GameBoard"]
offset_left = 14.999997
offset_top = 121.0
offset_right = 433.0
offset_bottom = 491.0
scale = Vector2(0.03, 0.03)
texture_normal = ExtResource("11_qmy6f")
stretch_mode = 0

[node name="RedPowerUp2" type="TextureButton" parent="GameBoard"]
offset_left = 45.0
offset_top = 122.99999
offset_right = 388.0
offset_bottom = 425.0
scale = Vector2(0.03, 0.03)
texture_normal = ExtResource("12_mwfav")

[node name="RedPowerUp3" type="TextureButton" parent="GameBoard"]
offset_left = 74.0
offset_top = 121.99999
offset_right = 315.0
offset_bottom = 448.0
scale = Vector2(0.03, 0.03)
texture_normal = ExtResource("13_3p2gp")

[node name="BluePowerUp1" type="TextureButton" parent="GameBoard"]
offset_left = 16.0
offset_top = 3.0000076
offset_right = 434.0
offset_bottom = 373.0
scale = Vector2(0.03, 0.03)
texture_normal = ExtResource("11_qmy6f")

[node name="BluePowerUp2" type="TextureButton" parent="GameBoard"]
offset_left = 46.0
offset_top = 3.0
offset_right = 389.0
offset_bottom = 305.0
scale = Vector2(0.03, 0.03)
texture_normal = ExtResource("12_mwfav")

[node name="BluePowerUp3" type="TextureButton" parent="GameBoard"]
offset_left = 80.00001
offset_top = 4.0000005
offset_right = 321.0
offset_bottom = 330.0
scale = Vector2(0.03, 0.03)
texture_normal = ExtResource("13_3p2gp")

[node name="PowerUpAnimator" type="AnimationPlayer" parent="GameBoard"]
root_node = NodePath("../PowerUpLabel")
libraries = {
&"": SubResource("AnimationLibrary_mwfav")
}

[node name="PowerUpLabel" type="Label" parent="GameBoard"]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[connection signal="accept_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_accept_pressed"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_moved"]
